--- a/_config.yml
+++ b/_config.yml
@@ -13,25 +13,11 @@
 # https://learnxinyminutes.com/docs/yaml/
 #
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-title: maxvoltar.photo
-email: tim@maxvoltar.be
-author:
-  name: Tim Van Damme
-  email: tim@maxvoltar.be #optional
-  website: https://maxvoltar.com
-description: >- # this means to ignore newlines until "baseurl:"
-  @maxvoltar's minimalistic, self-hosted photo stream.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://maxvoltar.photo/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: maxvoltar
-github_username: maxvoltar
-instagram_username: maxvoltar
-
+# These are used to personalize your new site and can be found in the .env file.
+# If you look in the HTML files, you will see them accessed via {{ site.env.TITLE }}, 
+# {{ site.env.EMAIL }}, and so on. You can create any custom variable you would like,
+# and they will be accessible in the templates via {{ site.env.MYVARIABLE }}.
+#
 # Build settings
 plugins:
   - jekyll-exif-data
