--- a/.env
+++ b/.env
@@ -5,8 +5,10 @@ AUTHOR_EMAIL=tim@maxvoltar.be
 AUTHOR_WEBSITE=https://maxvoltar.com
 DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
 BASEURL=
-URL=https://maxvoltar.photo/
+URL=https://maxvoltar.photo/ # must end with / or links will be broken
 SHOW_OFFICIAL_GITHUB=1
 #TWITTER_USERNAME=maxvoltar
 #GITHUB_USERNAME=maxvoltar
 #INSTAGRAM_USERNAME=maxvoltar
+#CUSTOM_LINK_NAME=
+#CUSTOM_LINK_URL=
