Adding new sync option using lftp, sync scripts are now using env variables

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ SHOW_OFFICIAL_GITHUB=1
 #INSTAGRAM_USERNAME=maxvoltar
 #CUSTOM_LINK_NAME=
 #CUSTOM_LINK_URL=
+#SYNCUSER=
+#SYNCPASS=
+#SYNCSERVER=
+#SYNCFOLDER=
