simplify building for RPI

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
 BASEURL=
 URL=https://maxvoltar.photo/ # must end with / or links will be broken
 SHOW_OFFICIAL_GITHUB=1
+PHOTO_PATH=./photos
 #TWITTER_USERNAME=maxvoltar
 #GITHUB_USERNAME=maxvoltar
 #INSTAGRAM_USERNAME=maxvoltar
