Feature Resort Order #17
Former-commit-id: cf8501fc5e8be78a100a996a02e0184b286b87ad

--- a/.env
+++ b/.env
@@ -5,15 +5,18 @@ AUTHOR_EMAIL=tim@maxvoltar.be
 AUTHOR_WEBSITE=https://maxvoltar.com
 DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
 BASEURL=
-URL=https://maxvoltar.photo/ # must end with / or links will be broken
+# URL must end with / or links will be broken
+URL=https://maxvoltar.photo/
 SHOW_OFFICIAL_GITHUB=1
+ALLOW_ORDER_SORT_CHANGE=1
 PHOTO_PATH=./photos
-#TWITTER_USERNAME=maxvoltar
-#GITHUB_USERNAME=maxvoltar
-#INSTAGRAM_USERNAME=maxvoltar
-#CUSTOM_LINK_NAME=
-#CUSTOM_LINK_URL=
-#SYNCUSER=
-#SYNCPASS=
-#SYNCSERVER=
-#SYNCFOLDER=
+# leave the following blank to disable
+TWITTER_USERNAME=
+GITHUB_USERNAME=maxvoltar
+INSTAGRAM_USERNAME=maxvoltar
+CUSTOM_LINK_NAME=
+CUSTOM_LINK_URL=
+SYNCUSER=
+SYNCPASS=
+SYNCSERVER=
+SYNCFOLDER=
