Introduce option to keep original files
By setting ALLOW_ORIGINAL_DOWNLOAD to 1, the original files will not be
deleted after creating the scaled versions. This is the foundation for
making the full size images downloadable.
By default, ALLOW_ORIGINAL_DOWNLOAD is 0 and original images will be
deleted while Jekyll does its thing.


Former-commit-id: c6c834f09bd1c11531a60011b07d323c894eda67

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ BASEURL=
 URL=https://maxvoltar.photo/
 SHOW_OFFICIAL_GITHUB=1
 ALLOW_ORDER_SORT_CHANGE=1
+ALLOW_ORIGINAL_DOWNLOAD=0
 PHOTO_PATH=./photos
 # leave the following blank to disable
 TWITTER_USERNAME=
