add option to disallow indexing by crawlers
Former-commit-id: 9ab06de047197b088798bc8d787e9a86e793b7d0

--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ URL=https://maxvoltar.photo/
 SHOW_OFFICIAL_GITHUB=1
 ALLOW_ORDER_SORT_CHANGE=1
 ALLOW_ORIGINAL_DOWNLOAD=0
+ALLOW_INDEXING=1
 PHOTO_PATH=./photos
 # leave the following blank to disable
 TWITTER_USERNAME=
