--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ SHOW_OFFICIAL_GITHUB=1
 ALLOW_ORDER_SORT_CHANGE=1
 ALLOW_ORIGINAL_DOWNLOAD=0
 ALLOW_INDEXING=1
+ALLOW_IMAGE_SHARING=1
 PHOTO_PATH=./photos
 # leave the following blank to disable
 TWITTER_USERNAME=
