--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - DESCRIPTION=${DESCRIPTION}
       - BASEURL=${BASEURL}
       - URL=${URL}
+      - SHOW_RSS_BUTTON=${SHOW_RSS_BUTTON}
       - SHOW_OFFICIAL_GITHUB=${SHOW_OFFICIAL_GITHUB}
       - TWITTER_USERNAME=${TWITTER_USERNAME}
       - INSTAGRAM_USERNAME=${INSTAGRAM_USERNAME}
