Updated name of RSS feed option CHanged default value to 1 to show the button by default
Former-commit-id: 6695490c2785e59d437885891570afcdbefecdbf

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
 BASEURL=
 # URL must end with / or links will be broken
 URL=https://maxvoltar.photo/
-SHOW_RSS_BUTTON=0
+SHOW_RSS_FEED=1
 SHOW_OFFICIAL_GITHUB=1
 ALLOW_ORDER_SORT_CHANGE=1
 ALLOW_ORIGINAL_DOWNLOAD=0
