Add option to reverse image sort by default
Previously, the images where sorted based on when they were taken
from newest to oldest image. This is not alway the wished behaviour
as discussed in #42. Therefore this commit will add a new option in
the .env file which when set will reverse the images upon assignment

--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ ALLOW_ORIGINAL_DOWNLOAD=0
 ALLOW_INDEXING=1
 ALLOW_IMAGE_SHARING=1
 PHOTO_PATH=./photos
+# Default sort order is newest to oldest images. Setting the following
+# to 1 will reverse this sort order and show oldest images first.
+DEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
 TWITTER_USERNAME=
 GITHUB_USERNAME=maxvoltar
