--- a/_config.yml
+++ b/_config.yml
@@ -27,21 +27,21 @@ image_processing:
   large:
     source: photos/original
     destination: photos/large
-    resize_to_limit: [2048, 2048]
-    saver:
-      strip: true
+#    resize_to_limit: [2048, 2048]
+#    saver:
+#      strip: true
   thumbnail:
     source: photos/original
     destination: photos/thumbnail
-    resize_to_limit: [640, 640]
-    saver:
-      strip: true
+#    resize_to_limit: [640, 640]
+#    saver:
+#      strip: true
   tint:
     source: photos/original
     destination: photos/tint
-    resize_to_fill: [1,1]
-    saver:
-      strip: true
+#    resize_to_fill: [1,1]
+#    saver:
+#      strip: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
