--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ AUTHOR_EMAIL=tim@maxvoltar.be
 AUTHOR_WEBSITE=https://maxvoltar.com
 DESCRIPTION=@maxvoltar's minimalistic, self-hosted photo stream.
 BASEURL=
-# URL must end with / or links will be broken
-URL=https://maxvoltar.photo/
+# URL must NOT end with / or links will be messed up
+URL=https://maxvoltar.photo
 SHOW_RSS_FEED=1
 SHOW_OFFICIAL_GITHUB=1
 ALLOW_ORDER_SORT_CHANGE=1
