--- a/.env
+++ b/.env
@@ -9,6 +9,8 @@ BASEURL=
 URL=https://maxvoltar.photo
 SHOW_RSS_FEED=1
 SHOW_OFFICIAL_GITHUB=1
+HEADER_ENABLED=0
+HEADER_BACKGROUND_COLOR="#161e2e"
 ALLOW_ORDER_SORT_CHANGE=1
 ALLOW_ORIGINAL_DOWNLOAD=0
 ALLOW_INDEXING=1
