--- a/.env
+++ b/.env
@@ -20,9 +20,10 @@ PHOTO_PATH=./photos
 # to 1 will reverse this sort order and show oldest images first.
 DEFAULT_REVERSE_SORT=0
 # leave the following blank to disable
-TWITTER_USERNAME=
-GITHUB_USERNAME=maxvoltar
-INSTAGRAM_USERNAME=maxvoltar
+AUTHOR_LINKS='["github":"https://github.com/maxvoltar","x":"https://twitter.com/maxvoltar","instagram":"https://www.instagram.com/maxvoltar"]'
+TWITTER_USERNAME= # deprecated, use AUTHOR_LINKS instead
+GITHUB_USERNAME= # deprecated, use AUTHOR_LINKS instead
+INSTAGRAM_USERNAME= # deprecated, use AUTHOR_LINKS instead
 CUSTOM_LINK_NAME=
 CUSTOM_LINK_URL=
 SYNCUSER=
